--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "@react-navigation/stack": "^7.1.2",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-input-outline": "^1.5.2",
+    "react-native-otp-entry": "^1.8.3",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-screens": "^4.9.2",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
