--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-input-outline": "^1.5.2",
     "react-native-otp-entry": "^1.8.3",
     "react-native-paper": "^5.13.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
