--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/material-top-tabs": "^7.2.3",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
@@ -20,6 +21,7 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-input-outline": "^1.5.2",
     "react-native-otp-entry": "^1.8.3",
+    "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.17.1",
