--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/material-top-tabs": "^7.2.3",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
+    "@tanstack/react-query": "^5.73.3",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "i18next": "^24.2.3",
     "react": "19.0.0",
+    "react-i18next": "^15.4.1",
     "react-native": "0.78.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-input-outline": "^1.5.2",
