--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.2",
+    "@miblanchard/react-native-slider": "^2.6.0",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.1",
@@ -20,10 +22,13 @@
     "@react-navigation/stack": "^7.1.2",
     "@tanstack/react-query": "^5.73.3",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "axios": "^1.9.0",
     "i18next": "^24.2.3",
+    "npm": "^11.4.1",
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.78.0",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-input-outline": "^1.5.2",
     "react-native-otp-entry": "^1.8.3",
@@ -34,7 +39,8 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -54,6 +60,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
+    "reactotron-react-native": "^5.1.13",
     "typescript": "5.0.4"
   },
   "engines": {
