--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-native-snap-carousel": "^3.8.11",
     "axios": "^1.9.0",
     "i18next": "^24.2.3",
+    "jwt-decode": "^4.0.0",
     "npm": "^11.4.1",
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
