fix: checkout screens

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.2",
     "@miblanchard/react-native-slider": "^2.6.0",
+    "@ouedraogof/react-native-progress-steps": "^1.0.3",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
@@ -29,12 +30,14 @@
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.78.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-input-outline": "^1.5.2",
     "react-native-otp-entry": "^1.8.3",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
+    "react-native-progress-steps": "^2.0.3",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-reanimated-carousel": "^4.0.2",
