setup google maps for iOS

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ouedraogof/react-native-progress-steps": "^1.0.3",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/material-top-tabs": "^7.2.3",
@@ -34,6 +35,7 @@
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-input-outline": "^1.5.2",
+    "react-native-maps": "^1.24.3",
     "react-native-otp-entry": "^1.8.3",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
