--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "^4.5.6",
+    "@react-native-community/toolbar-android": "github:react-native-community/toolbar-android",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/material-top-tabs": "^7.2.3",
     "@react-navigation/native": "^7.0.15",
@@ -33,12 +34,16 @@
     "react-native": "0.78.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-config": "^1.5.5",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-input-outline": "^1.5.2",
+    "react-native-just-timeline": "^0.0.2",
     "react-native-maps": "^1.24.3",
     "react-native-otp-entry": "^1.8.3",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
+    "react-native-progress-bar": "^0.1.2",
     "react-native-progress-steps": "^2.0.3",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.17.1",
@@ -46,7 +51,8 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-vertical-status-progress": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
