--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vertical-status-progress": "^0.1.3"
   },
