--- a/ios/NiramiApp/Info.plist
+++ b/ios/NiramiApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>NiramiApp</string>
+	<string>Nirami</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -34,7 +34,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need access to your location to show you relevant search results. With "Always" access we'll also send you some nice notifications</string>
+	<string>We need access to your location to show you relevant search results. With &quot;Always&quot; access we&apos;ll also send you some nice notifications</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Almarai-Bold.ttf</string>
