fix: some bug fixes

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-snap-carousel": "^3.9.1",
